tanzu-demo/pre-built/apps.tanzu.vmware.com.ContainerApp/fortio/kubernetes-carvel-package/output/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: fortio-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-fortio
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: fortio
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
